cmake_minimum_required(VERSION 2.8)
set (ANDROID_NDK /Users/cristi/programe/android-ndk-r10d CACHE INTERNAL ANDROID_NDK FORCE)
set (KRAL_PATH /Users/cristi/projects/raytracer/KRAL/ CACHE INTERNAL KRAL_PATH FORCE)
set (PLATFORM osx CACHE INTERNAL PLATFORM FORCE)
set (CMAKE_BUILD_TYPE debug CACHE INTERNAL BUILD_TYPE FORCE)
set (PACKAGES /Users/cristi/projects/raytracer/KRAL_libs CACHE INTERNAL PACKAGE_DIRS FORCE)
set (NEW_CMAKE True)
set ("RUNTIME_DIR" debug  CACHE INTERNAL "" FORCE)
set ("IOS_SDK_PATH" "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs"  CACHE INTERNAL "" FORCE)
set ("TARGETSDK" MacOSX10.9.sdk  CACHE INTERNAL "" FORCE)
set ("CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD" c++11  CACHE INTERNAL "" FORCE)
set ("CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY" libc++  CACHE INTERNAL "" FORCE)
set ("TESTS" True )
add_subdirectory (/Users/cristi/projects/raytracer/raytracer)